Updated to same as base Dockerfile
Reflects the same changes as the base Dockerfile - Yes I should just base this one off that...

--- a/KDE/Dockerfile
+++ b/KDE/Dockerfile
@@ -22,12 +22,17 @@ RUN apt-get update -y && apt-get install -y plasma-desktop
 # SSH runtime
 RUN mkdir /var/run/sshd
 
-#Configure root password - CHANGE THIS
+#Configure root password and set it to expire to force user to change
 RUN echo "root:SuperSecureRootPassword" | chpasswd
+RUN chage -d 0 root
 
 # Configure default user
-RUN adduser --gecos "X2go User" --disabled-password x2go
+RUN adduser --gecos "X2go User" -m --disabled-password x2go
 RUN echo "x2go:x2go" | chpasswd
+
+#Desktop Note with credits
+RUN echo -e "To give the user sudo access, run 'su' and use the password 'SuperSecureRootPassword' (You will be told to change this) and then use 'usermod -aG sudo x2go'.\nEnjoy!\n\nThis script was based on the work of https://github.com/bigbrozer - Check out his Github!" | tee /home/x2go/Desktop/README.txt
+RUN chown x2go:x2go /home/x2go/Desktop/README.txt && chmod 777 /home/x2go/Desktop/README.txt
 
 # Run it
 EXPOSE 22
