Added resolvconf fix
ubuntu-mate-desktop installs resolvconf - As /etc/resolv.conf is symlinked to the hosts version, it's not writable. So resolvconf fails when configuring during the build. This "fix" works around this.

--- a/mate/Dockerfile
+++ b/mate/Dockerfile
@@ -2,5 +2,9 @@
 FROM adamprice56/x2go-ubuntu
 MAINTAINER Adam Price <adam@aprice.cf>
 
+ # fix so resolvconf can be configured
+ RUN echo "resolvconf resolvconf/linkify-resolvconf boolean false" | debconf-set-selections
+
+
 #Install ubuntu mate desktop for MATE + extras
 RUN apt-get update -y && apt-get install -y ubuntu-mate-desktop
