--- a/mate/Dockerfile
+++ b/mate/Dockerfile
@@ -7,4 +7,4 @@ MAINTAINER Adam Price <adam@aprice.cf>
 
 
 #Install ubuntu mate desktop for MATE + extras
-RUN apt-get update -y && apt-get install -y ubuntu-mate-desktop
+RUN apt-get update -y && apt-get install -y ubuntu-mate-desktop x2gomatebindings
